// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> Renders Correctly 1`] = `
<header
  className="Header"
>
  <h1
    className="Header__Logo"
  >
    Slack Deletron
  </h1>
  <div
    className="Header__Meta"
  >
     
    <a
      className="LoginButton"
      href="auth/slack"
    >
      <img
        alt="Sign in with Slack"
        height="40"
        src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
        srcSet="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x"
        width="172"
      />
    </a>
  </div>
</header>
`;

exports[`<Header /> does not render a Header component in the loggedIn State when other values are provided 1`] = `
<header
  className="Header"
>
  <h1
    className="Header__Logo"
  >
    Slack Deletron
  </h1>
  <div
    className="Header__Meta"
  >
     
    <a
      className="LoginButton"
      href="auth/slack"
    >
      <img
        alt="Sign in with Slack"
        height="40"
        src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
        srcSet="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x"
        width="172"
      />
    </a>
  </div>
</header>
`;

exports[`<Header /> does not render a Header component in the loggedIn State with no other props provided 1`] = `
<header
  className="Header"
>
  <h1
    className="Header__Logo"
  >
    Slack Deletron
  </h1>
  <div
    className="Header__Meta"
  >
     
    <a
      className="LoginButton"
      href="auth/slack"
    >
      <img
        alt="Sign in with Slack"
        height="40"
        src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
        srcSet="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x"
        width="172"
      />
    </a>
  </div>
</header>
`;

exports[`<Header /> renders a loggedIn Header with a name and an avatar 1`] = `
<header
  className="Header"
>
  <h1
    className="Header__Logo"
  >
    Slack Deletron
  </h1>
  <div
    className="Header__Meta"
  >
     
    <p
      className="Header__Name"
    >
      Hey 
      George Jetson
       
    </p>
    <img
      alt="George Jetson"
      className="Header__Avatar"
      src="https://secure.gravatar.com/avatar/f2d55f35afbc3f607e34504f5a2d7d88.jpg?s=192&d=https%3A%2F%2Fa.slack-edge.com%2F7fa9%2Fimg%2Favatars%2Fava_0006-192.png"
    />
    <a
      className="Button"
      href="api/logout"
    >
      Logout
    </a>
  </div>
</header>
`;
